# CLI-Text-Parser

./: Cargo.toml
src/: main.rs
