[package]
name = "CLITextParser"
version = "0.0.2"
authors = ["EljahSource, https://github.com/ElijahSource"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/ElijahSource/CLI-Text-Parser"
repository = "https://github.com/ElijahSource/CLI-Text-Parser"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
edition = "2024"
clap = { version = "4.5.7", features = ["derive"] }